--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,32 +12,32 @@
         {% csrf_token %}
         <div class="mb-6">
             <label for="" >Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Create Username (Only letter & number)"  >
+            <input type="text" class="form-control" id="username" name="username" placeholder="Create Username (Only letter & number)"  required>
             
           </div>
           <div class="mb-6">
             <label for="" >First Name</label>
-            <input type="text" class="form-control" id="fname" name="fname" placeholder="FirstName"  >
+            <input type="text" class="form-control" id="fname" name="fname" placeholder="FirstName" required >
             
           </div>
           <div class="mb-6">
             <label for="" >Last Name</label>
-            <input type="text" class="form-control" id="lname" name="lname" placeholder="LastName"  >
+            <input type="text" class="form-control" id="lname" name="lname" placeholder="LastName"  required>
             
           </div>
           <div class="mb-6">
             <label for="" >Email</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Email"  >
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email" required >
             
           </div>
           <div class="mb-6">
             <label for="" >Password</label>
-            <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Password"  >
+            <input type="password" class="form-control" id="pass1" name="pass1" placeholder="Password" required >
             
           </div>
           <div class="mb-6">
             <label for="" >Confirm Password</label>
-            <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Confirm Password"  >
+            <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Confirm Password" required >
             
           </div>
           <button type="submit">Signup</button>
